[package]
name = "cube"
version = "0.1.0"
edition = "2024"
publish = true
license = "MIT"
authors = ["Ö. Efe D."]
description = "Create a cube with a meaning in no time"
readme = "README.md"
repository = "https://github.com/skyline69/cube"
keywords = ["opengl", "graphics", "cgmath", "glfw"]
categories = ["graphics", "rendering"]


[dependencies]
cgmath = "0.18.0"
gl = "0.14.0"
glfw = "0.60.0"
rusttype = "0.9.3"

[profile.dev]
opt-level = 1
overflow-checks = true


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
