[package]
name = "cube-command"
version = "0.3.0"
edition = "2024"
publish = true
license-file = "LICENSE"
authors = ["Ö. Efe D."]
description = "Create a cube with a meaning in no time"
readme = "README.md"
repository = "https://github.com/skyline69/cube"
keywords = ["opengl", "graphics", "cgmath", "glfw"]
categories = ["graphics", "rendering"]


[dependencies]
cgmath = "0.18.0"
gl = "0.14.0"
glfw = { version = "0.60.0", features = ["prebuilt-libs", "static-link"] }
rusttype = "0.9.3"
thiserror = "2.0.17"

[[bin]]
name = "cube"
path = "src/main.rs"

[profile.dev]
opt-level = 1
overflow-checks = true


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
